[project]
name = "bc-configs"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Тёма Широких", email = "yartemetr@yandex.ru" }]
requires-python = ">=3.11"
dependencies = [
    "autodoc-pydantic>=2.2.0",
    "furo>=2025.9.25",
    "myst-parser>=4.0.1",
    "pydantic",
    "pyyaml",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-rtd-theme>=3.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["coverage", "mypy", "pre-commit", "pytest", "python-dotenv", "ruff"]

[tool.mypy]
plugins = ['pydantic.mypy']
exclude = ["^docs/*"]
